@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<!DOCTYPE Configure PUBLIC "-//Mort Bay Consulting//DTD Configure 1.0//EN"
+ "http://jetty.mortbay.com/configure_1_0.dtd">
+<Configure class="com.mortbay.HTTP.HttpServer">
+	<Call name="addListener">
+		<Arg>
+			<New class="com.mortbay.HTTP.SocketListener">
+				<Set name="Port">8080</Set>
+				<Set name="MinThreads">5</Set>
+				<Set name="MaxThreads">255</Set>
+				<Set name="MaxIdleTimeMs">50000</Set>
+			</New>
+		</Arg>
+	</Call>
+	<Call name="addWebApplication">
+		<Arg>/tutorial/*</Arg>
+		<Arg>Tutorial.war</Arg>
+		<Arg/>
+	</Call>
+</Configure>
