@@ -1,0 +1,70 @@
+<?xml version="1.0"?>
+<!--$Id$ -->
+<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 1.2//EN"
+ "http://java.sun.com/j2ee/dtds/web-app_2_2.dtd">
+<web-app>
+	<display-name>Tapestry Tutorial</display-name>
+	<servlet>
+		<servlet-name>hello</servlet-name>
+		<servlet-class>tutorial.hello.HelloWorldServlet</servlet-class>
+		<init-param>
+			<param-name>com.primix.tapestry.context-path</param-name>
+			<param-value>/tutorial</param-value>
+		</init-param>
+	</servlet>
+	<servlet>
+		<servlet-name>simple</servlet-name>
+		<servlet-class>tutorial.simple.SimpleServlet</servlet-class>
+		<init-param>
+			<param-name>com.primix.tapestry.context-path</param-name>
+			<param-value>/tutorial</param-value>
+		</init-param>
+	</servlet>
+	<servlet>
+		<servlet-name>adder</servlet-name>
+		<servlet-class>tutorial.adder.AdderServlet</servlet-class>
+		<init-param>
+			<param-name>com.primix.tapestry.context-path</param-name>
+			<param-value>/tutorial</param-value>
+		</init-param>
+	</servlet>
+	<servlet>
+		<servlet-name>border</servlet-name>
+		<servlet-class>tutorial.border.BorderServlet</servlet-class>
+		<init-param>
+			<param-name>com.primix.tapestry.context-path</param-name>
+			<param-value>/tutorial</param-value>
+		</init-param>
+	</servlet>
+	<servlet>
+		<servlet-name>survey</servlet-name>
+		<servlet-class>tutorial.survey.SurveyServlet</servlet-class>
+		<init-param>
+			<param-name>com.primix.tapestry.context-path</param-name>
+			<param-value>/tutorial</param-value>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>hello</servlet-name>
+		<url-pattern>/hello/*</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>simple</servlet-name>
+		<url-pattern>/simple/*</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>adder</servlet-name>
+		<url-pattern>/adder/*</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>survey</servlet-name>
+		<url-pattern>/survey/*</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>border</servlet-name>
+		<url-pattern>/border/*</url-pattern>
+	</servlet-mapping>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+	</welcome-file-list>
+</web-app>
